@@ -62,14 +62,10 @@ public class VenvDetectionService {
                 continue;
             }
             final var p = venv.getPath();
-            if (p == null) {
+            if (p == null || p.isBlank()) {
                 continue;
             }
-            final var trimmed = p.trim();
-            if (trimmed.isEmpty()) {
-                continue;
-            }
-            out.add(trimmed);
+            out.add(p);
         }
         return List.copyOf(out);
     }
@@ -80,10 +76,10 @@ public class VenvDetectionService {
         }
         final var out = new ArrayList<Path>();
         for (final var p : pathStrings) {
-            if (p == null || p.trim().isEmpty()) {
+            if (p == null || p.isBlank()) {
                 continue;
             }
-            out.add(Path.of(p.trim()));
+            out.add(Path.of(p));
         }
         out.removeIf(Objects::isNull);
         return out;
